other slight changes to try and fix contrast issues

--- a/chamber/styles/member.css
+++ b/chamber/styles/member.css
@@ -1,10 +1,10 @@
 :root {
-  --primary-color: #554D8C;
+  --primary-color: #2F2A6A;
   --secondary-color: #ffffff;
   --text-color: #ffffff;
   --background-color: #f4f4f4;
   --accent-color: #555555;
-  --image-background: #BDBDD3;
+  --image-background: #D9D9EC;
 }
 
 * {
